--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -274,7 +274,7 @@ jobs:
 
   container-scan:
     name: Container Image Security Scan (Trivy)
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: build
     strategy:
       matrix:
@@ -302,7 +302,7 @@ jobs:
     #   github.event.action == 'closed' &&
     #   github.event.pull_request.merged == true &&
     #   (github.event.pull_request.base.ref == 'dev' || github.event.pull_request.base.ref == 'main')
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: container-scan
 
     steps:
