--- a/llm-apm-chart/templates/secretproviderclass.yaml
+++ b/llm-apm-chart/templates/secretproviderclass.yaml
@@ -15,7 +15,8 @@ spec:
     objects: |
       array:
 {{- range .Values.secretsProvider.objects }}
-        - objectName: {{ . }}
+        - |
+          objectName: {{ . }}
           objectType: secret
 {{- end }}
     tenantId: "{{ .Values.secretsProvider.tenantId }}"
