--- a/llm-apm-chart/values.yaml
+++ b/llm-apm-chart/values.yaml
@@ -143,7 +143,7 @@ secretsProvider:
     - AZURE-OPENAI-API-VERSION
     - AZURE-OPENAI-DEPLOYMENT
     - LLM-APM-SECRET-KEY
-    # - DATABASE-URL
+    - DATABASE-URL-1
     - REDIS-URL
     - VITE-API-BASE-URL
     - VITE-GRAFANA-URL
@@ -161,8 +161,8 @@ secretsProvider:
           key: AZURE_OPENAI_DEPLOYMENT
         - objectName: LLM-APM-SECRET-KEY
           key: LLM_APM_SECRET_KEY
-        # - objectName: DATABASE-URL
-        #   key: DATABASE_URL
+        - objectName: DATABASE-URL-1
+          key: DATABASE_URL_1
         - objectName: REDIS-URL
           key: REDIS_URL
     - secretName: frontend-env-secret
