--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -235,17 +235,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Log in to Docker Hub (before creating buildx builder)
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PAT }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PAT }}
 
       - name: Pre-pull previous cache images (best-effort)
         run: |
@@ -269,10 +269,10 @@ jobs:
           cache-to: |
             type=registry,ref=${{ secrets.DOCKER_USERNAME }}/llm-apm-${{ matrix.service }}:buildcache,mode=max
             type=local,dest=/tmp/.buildx-cache-new,mode=max
+          # ensure builder uses credentials (login already happened above)
+          # optional: enable buildkit pull behavior
+          pull: true
 
-      - name: Save buildx cache (optional)
-        run: |
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache || true
 
 
   container-scan:
