--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -7,7 +7,7 @@ concurrency:
 permissions:
   contents: read
   pull-requests: read
-  packages: write  # Required for GHCR
+  packages: write
 
 on:
   push:
@@ -278,13 +278,13 @@ jobs:
             --timeout 5m \
             "${IMAGE}" || true
 
-            
+
   deploy:
     name: Deploy to AKS with Auto-Rollback
     runs-on: ubuntu-latest
     needs: container-scan
     environment:
-      name: production
+      name: production-environment
       url: https://your-app-url.com
 
     steps:
