--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -589,16 +589,16 @@ jobs:
       # ============================================================
       # INGRESS CONTROLLER SETUP
       # ============================================================
-      - name: Deploy NGINX Ingress Controller
-        if: success()
-        run: |
-          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-          helm repo update
-          helm upgrade --install nginx-ingress ingress-nginx/ingress-nginx \
-            --namespace ingress-nginx \
-            --create-namespace \
-            --set controller.service.type=LoadBalancer \
-            --wait --timeout=5m
+      # - name: Deploy NGINX Ingress Controller
+      #   if: success()
+      #   run: |
+      #     helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+      #     helm repo update
+      #     helm upgrade --install nginx-ingress ingress-nginx/ingress-nginx \
+      #       --namespace ingress-nginx \
+      #       --create-namespace \
+      #       --set controller.service.type=LoadBalancer \
+      #       --wait --timeout=5m
 
       - name: Get NGINX Ingress External IP
         if: success()
