--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -188,46 +188,33 @@ jobs:
 
   build:
     name: Build & Push Docker Images
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [security-checks, backend-tests]
     strategy:
       matrix:
         service: [backend, frontend]
-      fail-fast: false
     steps:
       - uses: actions/checkout@v4
 
-      # Login to GHCR for storing your images
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-      # Login to Docker Hub for pulling base images (node, nginx, python, etc.)
-      - name: Log in to Docker Hub (for base images)
-        uses: docker/login-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PAT }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Pre-pull previous cache images (best-effort)
+        run: |
+          echo "Attempting to pull buildcache and latest for ${SERVICE:=${{ matrix.service }}}"
+          docker pull ${{ secrets.DOCKER_USERNAME }}/llm-apm-${{ matrix.service }}:buildcache || true
+          docker pull ${{ secrets.DOCKER_USERNAME }}/llm-apm-${{ matrix.service }}:latest || true
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}
-          tags: |
-            type=sha,prefix=,format=long
-            type=raw,value=latest
-
-      - name: Build & Push Docker image to GHCR
+      - name: Build & Push Docker image (with registry cache)
         uses: docker/build-push-action@v5
         with:
           context: ${{ matrix.service }}
@@ -235,15 +222,18 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:${{ env.IMAGE_TAG }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:latest
+            ${{ secrets.DOCKER_USERNAME }}/llm-apm-${{ matrix.service }}:${{ env.IMAGE_TAG }}
+            ${{ secrets.DOCKER_USERNAME }}/llm-apm-${{ matrix.service }}:latest
           cache-from: |
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:buildcache
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:latest
+            type=registry,ref=${{ secrets.DOCKER_USERNAME }}/llm-apm-${{ matrix.service }}:buildcache
+            type=registry,ref=${{ secrets.DOCKER_USERNAME }}/llm-apm-${{ matrix.service }}:latest
           cache-to: |
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:buildcache,mode=max
-          pull: true
-          labels: ${{ steps.meta.outputs.labels }}
+            type=registry,ref=${{ secrets.DOCKER_USERNAME }}/llm-apm-${{ matrix.service }}:buildcache,mode=max
+            type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+      - name: Save buildx cache (optional)
+        run: |
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache || true
 
   container-scan:
     name: Container Image Security Scan (Trivy)
