--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -188,7 +188,7 @@ jobs:
 
   build:
     name: Build & Push Docker Images
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: [security-checks, backend-tests]
     strategy:
       matrix:
