--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -238,11 +238,12 @@ jobs:
 
   container-scan:
     name: Container Image Security Scan (Trivy)
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build
     strategy:
       matrix:
         service: [backend, frontend]
+        
     steps:
       - uses: actions/checkout@v4
       - uses: docker/login-action@v2
