--- a/llm-apm-chart/values.yaml
+++ b/llm-apm-chart/values.yaml
@@ -39,7 +39,7 @@ backend:
 
   vpa:
     enabled: true
-    updateMode: "Off"   # Off => Recommendation-only (safe). Change to "Auto" only after testing.
+    updateMode: "Off"   
     minAllowed:
       cpu: "50m"
       memory: "64Mi"
@@ -47,11 +47,9 @@ backend:
       cpu: "2000m"
       memory: "4Gi"
 
-# Frontend
 frontend:
   enabled: true
   name: frontend
-  # replicas removed — HPA will control replica count if enabled
   image:
     repository: "1234suhas/llm-apm-frontend"
     tag: "latest"
@@ -78,14 +76,12 @@ frontend:
     periodSeconds: 20
     timeoutSeconds: 3
 
-  # HPA config for frontend
   hpa:
     enabled: true
     minReplicas: 1
     maxReplicas: 4
     cpuUtilization: 50
 
-# Redis (keep static / manual tuning)
 redis:
   enabled: true
   name: redis
@@ -112,7 +108,6 @@ service:
     type: ClusterIP
     port: 6379
 
-# Ingress
 ingress:
   enabled: true
   ingressClassName: nginx
@@ -122,7 +117,6 @@ ingress:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 
-# Cert-manager ClusterIssuer settings (used by template)
 clusterIssuer:
   email: suhaso2002@gmail.com
   name: letsencrypt-prod
@@ -171,10 +165,8 @@ secretsProvider:
         - objectName: VITE-GRAFANA-URL
           key: VITE_GRAFANA_URL
 
-# Resources for helm 
 podAnnotations: {}
 podLabels: {}
 
-# RBAC settings
 rbac:
   create: true
